[package]
name = "reedbot"
version = "0.1.0"
edition = "2021"

[dependencies]
jiff = { version = "0.2.5", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
untwine = { git = "https://github.com/boxbeam/untwine", rev = "535f0d2" }
